# mqtt-sysinfo

./: Cargo.toml  README.md  install.sh  mqtt-hostname-online.service  readme.md
.github/workflows/: rust.yml
src/: cli.rs  main.rs  mqtt.rs
systemd/system/: install.sh  remove.sh  service
systemd/user/: install.sh  remove.sh  service
