[package]
name = "mqtt-hostname-online"
description = "Publishes the online status of the device on the MQTT topic <hostname>/status"
version = "0.5.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/mqtt-hostname-online"
authors = ["EdJoPaTo <mqtt-hostname-online-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
# See https://doc.rust-lang.org/cargo/reference/profiles.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "4", features = ["deprecated", "derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["deprecated", "derive", "env", "wrap_help"] }
once_cell = "1"
rumqttc = "0.24"
sysinfo = { version = "0.32", default-features = false, features = ["component", "system"] }
tokio = { version = "1", features = ["macros"] }

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
maintainer-scripts = "systemd/system/"
systemd-units = { enable = false, start = false }
assets = [
	["target/release/mqtt-hostname-online", "/usr/bin/", "755"],
	["LICENSE", "/usr/share/licenses/mqtt-hostname-online/", "644"],
	["README.md", "/usr/share/doc/mqtt-hostname-online/", "644"],

	["target/completions/mqtt-hostname-online.bash", "/usr/share/bash-completion/completions/mqtt-hostname-online", "644"],
	["target/completions/mqtt-hostname-online.fish", "/usr/share/fish/completions/", "644"],
	["target/completions/_mqtt-hostname-online", "/usr/share/zsh/site-functions/", "644"],

	["target/manpages/*", "/usr/share/man/man1/", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/mqtt-hostname-online", dest = "/usr/bin/", mode = "755" },
	{ source = "LICENSE", dest = "/usr/share/licenses/mqtt-hostname-online/", mode = "644", doc = true },
	{ source = "README.md", dest = "/usr/share/doc/mqtt-hostname-online/", mode = "644", doc = true },

	{ source = "systemd/system/service", dest = "/usr/lib/systemd/system/mqtt-hostname-online.service", mode = "644" },

	{ source = "target/completions/mqtt-hostname-online.bash", dest = "/usr/share/bash-completion/completions/mqtt-hostname-online", mode = "644" },
	{ source = "target/completions/mqtt-hostname-online.fish", dest = "/usr/share/fish/vendor_completions.d/", mode = "644" },
	{ source = "target/completions/_mqtt-hostname-online", dest = "/usr/share/zsh/site-functions/", mode = "644" },

	{ source = "target/manpages/*", dest = "/usr/share/man/man1/", mode = "644", doc = true },
]
