[package]
name = "mqtt-sysinfo"
description = "Publish system infos of the device on the MQTT topics <hostname>/#"
version = "0.6.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/mqtt-sysinfo"
authors = ["EdJoPaTo <mqtt-sysinfo-rust@edjopato.de>"]
edition = "2021"
rust-version = "1.74"

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
# See https://doc.rust-lang.org/cargo/reference/profiles.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "4", features = ["deprecated", "derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["deprecated", "derive", "env", "wrap_help"] }
once_cell = "1"
rumqttc = "0.24"
sysinfo = { version = "0.33", default-features = false, features = ["component", "system"] }
tokio = { version = "1", features = ["macros"] }

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
maintainer-scripts = "systemd/system/"
systemd-units = { enable = false, start = false }
assets = [
	["target/release/mqtt-sysinfo", "/usr/bin/", "755"],
	["LICENSE", "/usr/share/licenses/mqtt-sysinfo/", "644"],
	["README.md", "/usr/share/doc/mqtt-sysinfo/", "644"],

	["target/completions/mqtt-sysinfo.bash", "/usr/share/bash-completion/completions/mqtt-sysinfo", "644"],
	["target/completions/mqtt-sysinfo.fish", "/usr/share/fish/completions/", "644"],
	["target/completions/_mqtt-sysinfo", "/usr/share/zsh/site-functions/", "644"],

	["target/manpages/*", "/usr/share/man/man1/", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/mqtt-sysinfo", dest = "/usr/bin/", mode = "755" },
	{ source = "LICENSE", dest = "/usr/share/licenses/mqtt-sysinfo/", mode = "644", doc = true },
	{ source = "README.md", dest = "/usr/share/doc/mqtt-sysinfo/", mode = "644", doc = true },

	{ source = "systemd/system/service", dest = "/usr/lib/systemd/system/mqtt-sysinfo.service", mode = "644" },

	{ source = "target/completions/mqtt-sysinfo.bash", dest = "/usr/share/bash-completion/completions/mqtt-sysinfo", mode = "644" },
	{ source = "target/completions/mqtt-sysinfo.fish", dest = "/usr/share/fish/vendor_completions.d/", mode = "644" },
	{ source = "target/completions/_mqtt-sysinfo", dest = "/usr/share/zsh/site-functions/", mode = "644" },

	{ source = "target/manpages/*", dest = "/usr/share/man/man1/", mode = "644", doc = true },
]
